# Dassh

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: release-tag.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs  sftp_cmds.rs  ssh_cmds.rs  vault_cmds.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/ssh/: manager.rs  mod.rs
src-tauri/src/vault/: mod.rs  models.rs
src/components/: ConfirmModal.tsx  ContextMenu.module.css  ContextMenu.tsx  Drawer.tsx  HostForm.tsx  Layout.tsx  Sidebar.module.css  Sidebar.tsx  Toast.tsx
src/lib/: commands.ts  themes.ts
src/pages/: Dashboard.module.css  Dashboard.tsx  Settings.module.css  Settings.tsx  SftpBrowser.tsx  Terminal.tsx  Unlock.tsx
src/store/: sessions.ts  settings.ts  vault.ts
src/styles/: globals.css
src/types/: index.ts
