[package]
name = "dassh"
version = "0.1.0"
description = "Dassh — minimal SSH session manager"
authors = []
edition = "2021"

[lib]
name = "dassh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
tokio          = { version = "1", features = ["full"] }
russh          = "0.44"
russh-keys     = "0.44"
russh-sftp     = "2"
chacha20poly1305 = "0.10"
argon2         = { version = "0.5", features = ["std"] }
uuid           = { version = "1", features = ["v4"] }
base64         = "0.22"
dirs           = "5"
rand           = "0.8"
thiserror      = "1"
async-trait    = "0.1"

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
